# icon

./: Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml  build.rs
example/fonts/: icons.toml
example/src/: icons.rs  lib.rs
src/: generate_font.rs  lib.rs
src/config/: mod.rs  parser.rs
src/generator/: mod.rs
src/generator/font/: mod.rs  svg.rs  ttf.rs
src/iconify/: client.rs  fetch.rs  mod.rs  types.rs
src/model/: collection.rs  definition.rs  gen_type.rs  glyph.rs  mod.rs
src/utils/: glyphs.rs  hash.rs  mod.rs  paths.rs  strings.rs
templates/: iced.rs.hbs
