[package]
name = "icon"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["fonts"]

[dependencies]
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
write-fonts = "0.43"
kurbo = "0.12"
usvg = "0.45"
handlebars = "6"
sha2 = "0.10"

[workspace]
members = ["example"]

[workspace.dependencies]
icon = { version = "0.1.0", path = "." }
